- Fixed bug #35759 (mysqli_stmt_bind_result() makes huge allocation when
  column empty). (Andrey)
- Fixed bug #35751 (using date with a timestamp makes httpd segfault). (Derick)
- Fixed bug #35517 (mysql_stmt_fetch returns NULL on data truncation). (Georg)
- Fixed bug #35377 (PDO_SQLITE: undefined reference to "fdatasync").
  (Nuno, Jani)
- Fixed bug #29955 (mb_strtoupper() / lower() broken with Turkish encoding).
  (Rui)
- Fixed bug #28899 (mb_substr() and substr() behave differently when
  "mbstring.func_overload" is enabled). (Rui)

22 Dec 2005, PHP 5.1.2RC1
- Updated libsqlite in ext/sqlite to 2.8.17. (Ilia)
- Updated libsqlite in ext/pdo_sqlite to 3.2.8. (Ilia)
- Updated to libxml2-2.6.22 and libxslt-1.1.15 in the win32 bundle. (Rob)
- Added new extensions: (Ilia, Wez)
  . XMLWriter
  . Hash
- Added PNG compression support to GD extension. (Pierre)
- Added reflection constants as class constants. (Johannes)
- Added --enable-gcov configure option to enable C-level code coverage.
  (John, Jani, Ilia, Marcus)
- Added missing support for 'B' format identifier to date() function. (Ilia)
- Changed reflection to be an extension. (Marcus)
- Improved SPL extension: (Marcus)
  . Added class SplFileInfo as root class for DirectoryIterator and 
    SplFileObject
  . Added SplTempFileObject
- Improved SimpleXML extension: (Marcus)
  . Fixed memleaks
  . Fixed var_dump()
  . Fixed isset/empty/(bool) behavior
  . Fixed iterator edge cases
  . Added methods getNamespaces(), getDocNamespaces()
- Fixed prepared statement name conflict handling in PDO_PGSQL. (Thies, Ilia)
- Fixed memory corruption when PDO::FETCH_LAZY mode is being used. (Ilia)
- Fixed possible leaks in imagecreatefromstring() with invalid data. (Pierre)
- Fixed possible memory corruption inside mb_strcut(). (Ilia)
- Fixed possible header injection by limiting each header to a single line.
  (Ilia)
- Fixed possible XSS inside error reporting functionality. (Ilia)
- Fixed many bugs in OCI8. (Tony)